--- a/lro/comms/copy/localhost/top.css
+++ b/lro/comms/copy/localhost/top.css
@@ -3,7 +3,7 @@
  */
 body {
  background-color: #000;
- background: url(/images/star_tile.gif);
+ background: url(/images/tfx-earthrise-as08_14_2383-2400x2000-2.jpg);
  margin: 0;
  padding: 0;
 }
@@ -22,7 +22,8 @@ div {
  padding-top: 8px;
 }
 div#body {
- margin: 46px;
+ margin-top: 30px;
+ margin-left: 120px;
  padding: 0;
  width: 768px;
  height: 600px;
@@ -55,7 +56,7 @@ ul.nav {
  margin-top: 8px;
  margin-left: 1em;
  padding: 1px;
- width: 642px;
+ width: 684px;
  background-color: #128;
  border: 1px solid #a0a0ef;
  float: left;
