Lot of update the web interface

--- a/legomindstorm/web/rover_v_2_0/style.css
+++ b/legomindstorm/web/rover_v_2_0/style.css
@@ -17,3 +17,8 @@ body {
 	border-right-style: solid;
 	border-right-color: #000000;
 }
+.who_is_online {
+width:250px;
+height:300px;
+overflow:auto;
+}
